feat: Add http trigger and client support